# GreenWatch

./: .gitignore  README.md
GreenWatch/: README.md  launch.vs.json
GreenWatch/HighLevelCore/: CMakeLists.txt  app_manifest.json  launch.vs.json  main.c
GreenWatch/RealTimeCore/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  launch.vs.json  linker.ld  main.c
GreenWatch/RealTimeCore/resources/: LPS22HH.c  LPS22HH.h  LSM6DS3.c  LSM6DS3.h  LSM6DSO.c  LSM6DSO.h  ui_msg.c  ui_msg.h  utilities.c  utilities.h
